--- a/src/CSS/filter/choicebox.css
+++ b/src/CSS/filter/choicebox.css
@@ -24,7 +24,7 @@
     cursor: pointer;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     margin: 20px 15px 0 15px;
-    background-color: rgb(197, 194, 194);
+    background-color: white;
     border-radius: 15px;
     border: 1px solid orange;
 }
