--- a/src/CSS/product-card/productList.css
+++ b/src/CSS/product-card/productList.css
@@ -79,11 +79,29 @@
     
 }
 
-.choice-box-bar{
+.search-bars-box{
     display: flex;
     flex-direction: column;
+    
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.choice-box-bar{
+    display: flex;
+    
     width: 100%;
     justify-content: center;
     align-items: center;
     margin: 40px 0;
+}
+
+.search-box-bar {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
 }
