--- a/src/CSS/filter/choicebox.css
+++ b/src/CSS/filter/choicebox.css
@@ -7,7 +7,7 @@
 
 .img-choice{
     width: 26%;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     margin: 20px 24px 10px 24px;
     padding: 10px;
     cursor: pointer;
@@ -26,15 +26,17 @@
     margin: 20px 15px 0 15px;
     background-color: white;
     border-radius: 15px;
-    border: 1px solid orange;
+    border: 1px solid rgb(87, 194, 243);
 }
 
 .choice-title-img:hover{
     transform: scale(1.1);
     transition-duration: 0.3s;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    border: 1px solid red;
 
 }
+
 
 .choice-title{
     margin: 0 0 10px 0;
