--- a/src/CSS/filter/searchBar.css
+++ b/src/CSS/filter/searchBar.css
@@ -17,7 +17,7 @@
     padding: 7px;
     border-radius: 0 20px 20px 0;
     cursor: pointer;
-    background-color: orange;
+    background-color: #E51B1B;
     color: white;
     font-size: 16px;
     font-weight: 600;
@@ -25,5 +25,5 @@
 
 .search-btn:hover{
     background-color: white;
-    color: orange;
+    color: #E51B1B;
 }
