--- a/src/CSS/header/basketHeader.css
+++ b/src/CSS/header/basketHeader.css
@@ -1,3 +1,13 @@
+
+.basket-header-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 140px;
+}
+
+
 .basket-box {
     display: flex;
     align-items: center;
@@ -7,17 +17,32 @@
     
 }
 
+.basket-logo-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+}
+
+.basket-title{
+    margin: 0;
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+
 
 .basket-list{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 260px;
+    width: 280px;
     background-color: whitesmoke;
     padding: 30px 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    top: 74px;
+    top: 96px;
     position: absolute;
 }
 
@@ -38,9 +63,9 @@
 }
 
 .icon-basket{
-    width: 20% ;
+    width: 40px;
     cursor: pointer;
-    margin-top: 20px;
+    margin:0;
 }
 
 .bar-separation{
@@ -51,7 +76,7 @@
 
 .produce, .quantity-produce, .total-title-basket-header, .total-price-basket-header {
     margin: 10px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .quantity-produce, .total-price-basket-header{
@@ -71,14 +96,14 @@
     padding: 2% 4%;
     border-radius: 15px;
     cursor: pointer;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     color: white;
     font-weight: 600;
 }
 
 .btn-order:hover{
     background-color: white;
-    color: orange;
+    color: rgb(87, 194, 243);
 }
 
 #triangle {
@@ -89,7 +114,7 @@ display : inline-block;
  border-right : 40px solid transparent;
  transform: rotate(45deg);
  position: absolute;
- top: 66px;
+ top: 90px;
  
  
 }
@@ -100,8 +125,8 @@ display : inline-block;
     height: 28px;
     border-radius: 23px;
     background: red;
-    top: 10px;
-    right:270px;
+    top: 20px;
+    right:210px;
     position: absolute;
     display: flex;
     text-align: center;
