--- a/src/CSS/header/connectHeader.css
+++ b/src/CSS/header/connectHeader.css
@@ -3,7 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 140px;
+    margin-right: 30px;
 }
 
 .connect-box{
@@ -11,19 +12,19 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 200px;
+    width: 140px;
 }
 
 .connect-list{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    width: 120px;
+    width: 160px;
     background-color: whitesmoke;
-    padding: 30px 10px;
+    padding: 40px 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    top: 74px;
+    top: 96px;
     position: absolute;
 
 }
@@ -36,7 +37,7 @@
      border-right : 40px solid transparent ;
      transform: rotate(45deg);
      position: absolute;
-     top: 68px;
+     top: 90px;
      
      
     }
@@ -55,18 +56,56 @@
 }
 
 .btn-connect {
-    width: 100%;
-    padding: 8px 12px;
+    width: 160px;
+    padding: 10px 16px;
     cursor: pointer;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     border-radius: 15px;
     color: white;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
-    margin: 6px 0;
+    margin: 0 ;
 }
 
 .btn-connect:hover {
     background-color: white;
-    color: orange;
+    color: rgb(87, 194, 243);
+}
+
+.connect-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.customer{
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+    margin: 0;
+}
+
+.identification{
+    color: white;
+    font-weight: 600;
+    margin: 0;
+    font-size: 14px;
+    
+}
+
+.new-customer{
+    font-size: 10px;
+    margin: 0 2px 0 0;
+}
+
+.register-basket-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.new-account{
+    font-size: 10px;
 }
