--- a/src/CSS/header/header.css
+++ b/src/CSS/header/header.css
@@ -1,14 +1,30 @@
 .header-container{
     display: flex;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     width: 100%;
     height: 10vh;
     justify-content: space-between;
 }
 
-.logo {
-    width: 26%;
-    margin: 10px;
+.logo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    margin: 2px 0 0 10px;
+}
+
+.logo-img {
+    width: 70px;
+    margin: 0;
+}
+
+.logo-name {
+    margin: 0;
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .basket-connection{
