--- a/src/CSS/inscription/register.css
+++ b/src/CSS/inscription/register.css
@@ -3,6 +3,10 @@
     width: 50%;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    margin: 6vh;
+    max-height: 1000px;
     
 }
 
@@ -12,17 +16,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    
     width: 100%;
-    padding: 40px 0;
-    margin: 20% 0 10% 0;
+    padding: 0 0;
+    margin: 2% 0 2% 0;
     text-align: center;
 }
 
-.bar-h {
-    border-left: 6px solid orange;
-    height: 25vh;
-    margin-left: 40px ;
+.bar-h-r {
+    border-right: 6px solid rgb(87, 194, 243);
+    border-bottom: 6px solid rgb(87, 194, 243) ;
+   width: 400px;
 
 
 }
@@ -40,7 +44,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 4%;
     width: 100%;
 
 }
@@ -48,15 +52,70 @@
 .btn-register{
     text-align: center;
     padding: 1% 4%;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     color: white;
     font-weight: 600;
+    width: 260px;
+    
 }
 
 .btn-register:hover{
     background-color: white;
-    color: orange;
+    color: rgb(87, 194, 243);
 
+}
+
+.logo-register{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-register p {
+    font-size: 34px;
+    font-weight: 600;
+    margin: 0;
+}
+
+.logo-register img {
+    width: 160px;
+    margin-top: 10px;
+}
+
+.input-register{
+    width: 240px;
+    margin-top: 8px;
+}
+
+.connect-box-b{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2% 10%;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;;
+    height: 10vh;
+    margin: 20px;
+    background-color: rgb(239, 245, 248) ;
+    
+
+}
+
+.connect-box-b p {
+    font-size: 16px;
+    margin: 2px;
+}
+
+.btn-connect-b{
+    text-align: center;
+    padding: 4% 4%;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+    font-weight: 600;
+    width: 260px;
 }
