--- a/src/CSS/product-card/productCard.css
+++ b/src/CSS/product-card/productCard.css
@@ -60,7 +60,7 @@
 
 .line-a{
     display: flex;
-    background-color: orange;
+    background-color: rgb(87, 194, 243);
     color: white;
     width: 100%;
     padding: 0 60px 0 0;
@@ -70,7 +70,7 @@
 .line-b{
     display: flex;
     background-color: white;
-    color: orange;
+    color: rgb(87, 194, 243);
     width: 100%;
     
 }
@@ -82,7 +82,7 @@
 .description-box{
     display: flex;
     width: 100%;
-    border: 1px solid orange;
+    border: 1px solid rgb(87, 194, 243);
     padding: 5px;
 }
 
