--- a/src/CSS/bodyContainer.css
+++ b/src/CSS/bodyContainer.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    /* flex-direction: column; */
     width: 100%;
     background-color: rgb(228, 222, 222);
     padding: 0;
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     background-color: white;
 
 }
@@ -30,8 +30,7 @@
     margin-top: 20px;
     height: fit-content;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
