--- a/src/CSS/form/form.css
+++ b/src/CSS/form/form.css
@@ -33,7 +33,13 @@
            align-items: center;
            display: flex;
            flex-direction: column;
+           box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+           padding: 30px;
+        }
 
+        .form-contact img {
+            width: 160px;
+            margin: 10px  0;
         }
 
             .form-input {
