--- a/src/CSS/adminCustomer/adminClientContainer.css
+++ b/src/CSS/adminCustomer/adminClientContainer.css
@@ -2,6 +2,7 @@
 
 .admin-client_container {
     display: flex;
+    flex-direction: column;
     width: 100%;
     justify-content: flex-start;
     
