--- a/src/CSS/adminCustomer/barCustomerChoice.css
+++ b/src/CSS/adminCustomer/barCustomerChoice.css
@@ -2,25 +2,27 @@
 
 .bar-customer-choice_container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     margin-right: 10px;
 }
 
 .navbar-customer{
     display: flex;
-    flex-direction: column;
-    width: 240px;
-    height:60vh ;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
     align-items: center;
     background-color: rgb(54, 54, 116);
 }
 
 .navbar-box{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
-    margin-top: 4vh;
+   
     justify-content: center;
 }
 
@@ -28,7 +30,7 @@
 .navbar-customer p{
     font-size: 22px ;
     font-weight: bold;
-    margin: 5px 0 5px 10px;
+    margin: 2% 4% 2% 4%;
     color: white;
     cursor: pointer;
 }
@@ -44,19 +46,26 @@
 .ordered-details-box{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 54vh;
+    height: 62vh;
     overflow-y: scroll;
     margin-top: 20px;
 
 }
 
-.homepage{
+.home-page{
     display: flex;
     flex-direction: column;
    justify-items: center;
    width: 100%;
-   text-align: center
+   text-align: center;
   
 
+}
+
+.home-page img {
+    width: 10%;
+    margin: 4% 0 ;
 }
