--- a/src/CSS/header/connectHeader.css
+++ b/src/CSS/header/connectHeader.css
@@ -98,6 +98,7 @@
 .new-customer{
     font-size: 10px;
     margin: 0 2px 0 0;
+    font-weight: 600;
 }
 
 .register-basket-box{
@@ -108,4 +109,31 @@
 
 .new-account{
     font-size: 10px;
+    font-weight: 600;
 }
+
+.new-account:hover{
+    color: red;
+}
+
+.disconnect-btn{
+    font-size: 16px;
+    text-decoration: none;
+    width: 100%;
+    text-align: center;
+    color:rgb(87, 194, 243);
+    font-weight: 600;
+}
+
+.disconnect-btn:hover{
+    color: red;
+}
+
+.disconnect-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+}
+
