--- a/src/CSS/header/header.css
+++ b/src/CSS/header/header.css
@@ -2,7 +2,7 @@
     display: flex;
     background-color: rgb(87, 194, 243);
     width: 100%;
-    height: 10vh;
+    height: 11vh;
     justify-content: space-between;
 }
 
@@ -25,6 +25,12 @@
     color: white;
     font-weight: 600;
     font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 .basket-connection{
