--- a/src/CSS/inscription/register.css
+++ b/src/CSS/inscription/register.css
@@ -89,7 +89,7 @@
     align-items: center;
     justify-content: center;
     padding: 2% 10%;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     height: 10vh;
     margin: 20px;
     background-color: rgb(239, 245, 248) ;
