--- a/src/CSS/header/basketHeader.css
+++ b/src/CSS/header/basketHeader.css
@@ -32,6 +32,19 @@
     color: white;
 }
 
+.basket-empty-box{
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.basket-empty{
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
 
 .basket-list{
     display: flex;
