--- a/src/CSS/Basket/basket.css
+++ b/src/CSS/Basket/basket.css
@@ -7,14 +7,17 @@
     width: 100%;
 }
 
+.basket_container h1 {
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
+
 .article-title-box{
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: space-between;
-    margin: 30px 0;
-
-}
+    margin: 30px 0;}
 
 .article-title{
     margin: 0  ;
@@ -24,6 +27,11 @@
     font-weight: 600;
     background-color:rgb(87, 194, 243) ;
     color: white;
+}
+
+.article-sup{
+    width: 2%;
+    background-color: white;
 }
 
 
@@ -50,7 +58,7 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 60px;
 }
 
 .img-article-box{
@@ -79,7 +87,6 @@
 
 .img-article{
     width: 30%;
-   
 }
 
 .title-result{
@@ -90,9 +97,7 @@
     width: 100%;
     margin: 0;
     font-size: 14px;
-    
 }
-
 
 .article-result{
     margin: 0 ;
@@ -112,7 +117,6 @@
     color:white;
 }
 
-
 .btn-quantity-a:hover{
     background-color: white;
     color:rgb(87, 194, 243);
@@ -130,7 +134,6 @@
     background-color: white;
     color:rgb(87, 194, 243);
 }
-
 
 .article-bar{
     border-top: 2px solid rgb(87, 194, 243);
@@ -150,9 +153,9 @@
 .basket-total-price{
     width: 30%;
     text-align: center;
+    font-weight: 600;
+    margin-bottom: 0;
 }
-
-
 
 .article-bar-total{
     border-top: 2px solid rgb(87, 194, 243);
@@ -171,6 +174,7 @@
     margin: 0;
     width: 20%;
     text-align: center ;
+    font-weight: 600;
 }
 
 .btn-back-next-box{
@@ -181,12 +185,23 @@
     margin:  30px 0 ;
 }
 
+.btn-back-next-box h5{
+    text-align: center;
+    color: white;
+    font-weight: 600;
+    background-color: rgb(177, 71, 71);
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 5px;
+   
+}
+
 Link{
     display: flex;
     width: 100%;
 }
 
-  .btn-back-next{
+.btn-back-next{
     padding: 10px 40px;
     border-radius: 15px;
     cursor: pointer;
@@ -200,4 +215,14 @@ Link{
 .btn-back-next:hover{
     background-color: white;
     color: rgb(87, 194, 243);
+}
+
+.bin{
+    width: 20px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.basketfull-logo{
+    width: 12%;
 }
