--- a/src/CSS/adminCustomer/barCustomerChoice.css
+++ b/src/CSS/adminCustomer/barCustomerChoice.css
@@ -12,10 +12,13 @@
 .navbar-customer{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 70%;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 1px solid rgb(87, 194, 243);
     justify-content: center;
     align-items: center;
-    background-color: rgb(54, 54, 116);
+    background-color: white;
 }
 
 .navbar-box{
@@ -31,8 +34,19 @@
     font-size: 22px ;
     font-weight: bold;
     margin: 2% 4% 2% 4%;
-    color: white;
+    color: rgb(87, 194, 243);
     cursor: pointer;
+    padding: 0 1%;
+}
+
+.navbar-customer p:hover{
+    
+    color: rgb(77, 165, 206);
+    
+    border-left: 2px solid rgb(87, 194, 243);
+    border-right: 2px solid rgb(87, 194, 243);
+    
+    
 }
 
 .contact-details-box{
@@ -68,4 +82,19 @@
 .home-page img {
     width: 10%;
     margin: 4% 0 ;
+}
+
+.home-page span {
+    color : rgb(87, 194, 243);
+}
+
+.setup-box{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.setup{
+    width: 16%;
 }
