--- a/src/CSS/adminCustomer/contactDetails.css
+++ b/src/CSS/adminCustomer/contactDetails.css
@@ -3,55 +3,46 @@
 .contact-details_container{
     display: flex;
     justify-content: center;
-    margin-top: 4%;
+
+    margin: 8%;
     width: 100%;
 }
 
 
-.billing-adress-detail_container{
+.billing-adress-detail_container , .billing-delivery-detail_container{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: 6px 16px;
-    margin: 0 50px 0 30px;
-    width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
-    height: 40vh;
-}
-
-.billing-adress-detail_container p {
-    font-size: 1.8vh;
-    margin: 2px 0 2px 4px; 
-}
-
-.billing-adress-detail_container h1{
-    font-size: 22px;
-    margin: 2px 0 2px 4px; 
-}
-
-
-.billing-delivery-detail_container{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: 6px 16px;
-    margin: 0 50px 0 30px;
-    width:100%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
-    height: 40vh;
-}
-
-.billing-delivery-detail_container p{
-    font-size: 1.8vh;
-    margin: 2px 0 2px 4px; 
-}
-
-.billing-delivery-detail_container h1{
-    font-size: 22px;
-    margin: 2px 0 2px 4px; 
     
+    padding: 16px;
+    margin: 0 50px 0 30px;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    height: 80%;
+}
+
+
+
+
+
+
+
+.billing-delivery-detail_container p , .billing-adress-detail_container p{
+    font-size: 2vh;
+    margin: 8px 0 2px 4px; 
+}
+
+.billing-delivery-detail_container h1, .billing-adress-detail_container h1{
+    font-size: 26px;
+    margin: 2px 0 2px 4px; 
+    text-align: center;
+    color : rgb(87, 194, 243);
+    font-weight: 600;
+    
+    
+}
+
+.detail{
+    margin: 2% 0 0 2%;
 }
 
 
