--- a/src/CSS/bodyContainer.css
+++ b/src/CSS/bodyContainer.css
@@ -6,6 +6,7 @@
     justify-content: center;
     /* flex-direction: column; */
     width: 100%;
+    height: fit-content;
     background-color: rgb(228, 222, 222);
     padding: 0;
     
