--- a/src/CSS/header/connectHeader.css
+++ b/src/CSS/header/connectHeader.css
@@ -18,14 +18,16 @@
 .connect-list{
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    width: 160px;
+    width: 300px;
     background-color: whitesmoke;
     padding: 40px 20px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     top: 96px;
+    right: 0;
     position: absolute;
+    z-index: 2;
 
 }
 
@@ -55,9 +57,9 @@
 
 }
 
-.btn-connect {
+.btn-connect-box .btn-connect {
     width: 160px;
-    padding: 10px 16px;
+    padding: 8px 5px;
     cursor: pointer;
     background-color: rgb(87, 194, 243);
     border-radius: 15px;
@@ -95,21 +97,23 @@
     
 }
 
-.new-customer{
-    font-size: 10px;
-    margin: 0 2px 0 0;
-    font-weight: 600;
-}
+
 
 .register-basket-box{
     display: flex;
-    align-items: center;
+    align-items:center;
+   justify-content: center;
     width: 100%;
+    margin: 10px 0;
 }
 
-.new-account{
+.new-account , .new-customer{
     font-size: 10px;
     font-weight: 600;
+}
+
+.new-account {
+    margin-left: 4px;
 }
 
 .new-account:hover{
@@ -123,6 +127,7 @@
     text-align: center;
     color:rgb(87, 194, 243);
     font-weight: 600;
+    margin-top: 8px;
 }
 
 .disconnect-btn:hover{
