--- a/src/CSS/product-card/productCard.css
+++ b/src/CSS/product-card/productCard.css
@@ -8,6 +8,10 @@
 }
 
 
+.product-card-container h1{
+   margin-top: 10px;
+}
+
 .card{
     display: flex;
     align-items: center;
@@ -15,6 +19,7 @@
     flex-direction: row;
     width: 100%;
     margin-top: 8vh;
+    border: none;
 }
 
 .img-card-box{
@@ -93,7 +98,7 @@
     display: flex;
     width: 100%;
     margin-top: 20px;
-    justify-content: center;
+    justify-content:space-between;
     align-items: center;
 }
 
@@ -142,18 +147,49 @@
 }
 
 .btn-put-basket{
-    padding: 2% 2%;
-    border-radius: 15px;
+    padding: 1% 1%;
+    border-radius: 10px;
     cursor: pointer;
-    background-color: rgb(243, 139, 139);;
+    background-color: rgb(243, 139, 139);
     color: white;
     font-weight: 600;
-    font-size: 16px;
-    width: 60%;  
+    font-size: 14px;
+    width: 30%;  
+}
+
+.btn-put-basket:hover{
+    background-color:rgb(242, 168, 168) ;
 }
 
 .price-card{
     font-size: 40px;
     color: black;
+    
+}
+
+.modal-basket{
+    border: 1px solid rgba(0, 128, 0, 0.302);
+    border-radius: 15px;
+    padding: 6px 20px;
+    background-color: rgba(0, 128, 0, 0.434);
+    visibility: hidden;
+    font-size: 12px;
+    transition: 1s ease-out;
+    margin: 0;
+    color: white;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.modal-basket img {
+    width: 30px;
+    margin-right: 10px;
+}
+
+.modal-basket p {
+    margin: 0;
     
 }
