--- a/src/CSS/product-card/productList.css
+++ b/src/CSS/product-card/productList.css
@@ -1,17 +1,15 @@
 .productlist_container{
-    width: 20%;
+    width: 22%;
     display: flex;
-    
     align-items: center;
     justify-content: center;
     background-color: white;
     padding: 10px 0;
-    margin: 0 0;
-    height: 40vh;
+    margin-bottom: 20px;
+    height: fit-content;
 }
 
 .div-map{
-    
     width: 90%;
     padding-bottom: 20px;
     margin-top: 20px;
@@ -27,7 +25,6 @@
     transform: scale(1.02);
     transition-duration: 0.3s;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    
 }
 
 .list-card{
@@ -35,14 +32,22 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-   }
+}
 
-
+.img-container{
+    width: 120px ;
+    height: 130px;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .list-img{
-    width: 100px;
+    width: 100%;
     height: auto;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    
 }
 
 .list-img-b{
@@ -80,38 +85,32 @@
     width: 100%;
 }
 
-
-
 .seperate-bar{
     width: 80%;
     border-top: 4px solid rgb(87, 194, 243);
-    margin: 5% 0;
-    
+    margin: 4% 0 2% 0 ;
 }
 
 .search-bars-box{
     display: flex;
     flex-direction: column;
-    
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin-top: 10px ;
 }
 
 .choice-box-bar{
     display: flex;
-    
     width: 100%;
     justify-content: center;
     align-items: center;
     margin: 40px 0;
 }
 
-.search-box-bar {
+.search-box-bar{
     display: flex;
     width: 100%;
     justify-content: center;
     align-items: center;
-
 }
