--- a/src/CSS/payment/paymentContainer.css
+++ b/src/CSS/payment/paymentContainer.css
@@ -11,17 +11,17 @@
 .summary-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+   align-items: center;
+   
     width: 100%;
-    margin: 50px 0;
+    margin:  0;
 
 
 }
 
 .billing-delivery-container{
     display: flex;
-    align-items: center;
+    margin: 0 20px;
     justify-content: center;
     width: 100%;
 }
@@ -51,4 +51,12 @@
 .total-price-payment p{
     margin: 0;
 
+}
+
+.sumary-adress-box{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    margin: 20px;
 }
